force-app/main/default/objects/Solar_Order__c/Solar_Order__c.object-meta.xml
<CustomObject>
    <label>Solar Order</label>
    <nameField>
        <displayFormat>SO-{0000}</displayFormat>
        <label>Solar Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Solar Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>